--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,16 +1,29 @@
-<h1>Login</h1>
+<section>
+<h2>Login</h2>
 <% if (messages.error) { %>
   <%= messages.error %>
 <% } %>
-<form action="/login" method="POST">
-  <div>
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" required>
+<div class="container1">
+  <div class="user signinBx">
+    <div class="imgBx"><img src="/assets/img/signin.jpg"></div>
+    <div class="formBx">
+      <form action="/login" method="POST">
+        <h2>Sign In</h2>
+        <input type="email" id="email" name="" placeholder="Email">
+        <input type="password" id="password" name="" placeholder="Password">
+        <input type="submit" name="" value="Login">
+        <p class="signup">Don't Have An Account? <a href="/register" onclick="toggleForm();">Register</a></p>
+        <!-- <p class="forget">Forget Password ? <a href="#">Click Here</a></p> -->
+      </form>
+    </div>
   </div>
-  <div>
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password" required>
-  </div>
-  <button type="submit">Login</button>
-</form>
-<a href="/register">Register</a>
+</div>
+</section>
+
+
+
+
+
+
+  
+ 
