--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,17 +1,20 @@
-<h1>Register</h1>
-<form action="/register" method="POST">
-  <div>
-    <label for="name">Name</label>
-    <input type="text" id="name" name="name" required>
+
+<div class="user signupBx">
+  <div class="formBx">
+    <form action="/register" method="POST">
+      <h2>Create An Account</h2>
+      <input type="text" id="name" name="" placeholder="Name">
+      <input type="email" id="email" name="" placeholder="Email">
+      <input type="password" id="password" name="" placeholder="Create Password">
+      <input type="password" id="password" name="" placeholder="Confirm Password">
+      <input type="submit" name="" value="Sign Up">
+      <p class="signup">Already Have An Account? <a href="/login" onclick="toggleForm();">Sign In</a></p>
+    </form>
   </div>
-  <div>
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" required>
-  </div>
-  <div>
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password" required>
-  </div>
-  <button type="submit">Register</button>
-</form>
-<a href="/login">Login</a>
+  <div class="imgBx"><img src="/assets/img/signup.jpg"></div>
+</div>
+
+
+
+    
+    
