--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,8 +9,8 @@
     <div class="formBx">
       <form action="/login" method="POST">
         <h2>Sign In</h2>
-        <input type="email" id="email" name="" placeholder="Email">
-        <input type="password" id="password" name="" placeholder="Password">
+        <input type="email" id="email" name="email" placeholder="Email">
+        <input type="password" id="password" name="password" placeholder="Password">
         <input type="submit" name="" value="Login">
         <p class="signup">Don't Have An Account? <a href="/register" onclick="toggleForm();">Register</a></p>
         <!-- <p class="forget">Forget Password ? <a href="#">Click Here</a></p> -->
