--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,10 +3,9 @@
   <div class="formBx">
     <form action="/register" method="POST">
       <h2>Create An Account</h2>
-      <input type="text" id="name" name="" placeholder="Name">
-      <input type="email" id="email" name="" placeholder="Email">
-      <input type="password" id="password" name="" placeholder="Create Password">
-      <input type="password" id="password" name="" placeholder="Confirm Password">
+      <input type="text" id="name" name="name" placeholder="Name">
+      <input type="email" id="email" name="email" placeholder="Email">
+      <input type="password" id="password" name="password" placeholder="Create Password">
       <input type="submit" name="" value="Sign Up">
       <p class="signup">Already Have An Account? <a href="/login" onclick="toggleForm();">Sign In</a></p>
     </form>
