--- a/public/assets/css/register.css
+++ b/public/assets/css/register.css
@@ -8,8 +8,11 @@ body {
 #ui {
     background-color: black;
     padding: 50px;
-    margin-top: 350px;
+    margin: 50px;
     border-radius: 10px;
+    opacity: 0.7;
+    width: 750px;
+    height: 570px;
 }
 #ui label,h1 {
     color: #fff;
