--- a/public/assets/css/template.css
+++ b/public/assets/css/template.css
@@ -38,7 +38,7 @@ body {
     z-index: -1;
 }
 .home-inner {
-    background-image: url(img/header.jpg);
+    background-image: url(../img/header.jpg);
     position: relative;
     height: 100vh;
     width: 100%;
