--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,7 +31,7 @@
           <option value="">Preffered Person</option>
           <option value="">Male (>18 years-old)</option>
           <option value="">Female (>18 years-old)</option>
-          <option value="">Teenager (13 - 17</option>
+          <option value="">Teenager (13 - 17)</option>
         </select>
       </div>
 
