--- a/public/assets/css/register.css
+++ b/public/assets/css/register.css
@@ -1,19 +1,96 @@
-body {
-    background-image: url(../img/background.JPG);
-    background-size: cover;
-    background-position: center center;
-    background-attachment: fixed;
+/* navigation */
+.navbar-brand img {
+    height: 2rem;
+}
+.navbar-dark {
+    padding: .6rem 1rem;
+    font-size: .9rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+}
+.navbar-nav li {
+    padding-right: .8rem;
+}
+.navbar-nav .nav-link {
+    padding-top: .8rem;
+    color: white!important;
+}
+.navbar-nav .nav-link:hover, .navbar-nav .nav-link.active {
+    color: turquoise!important;
 }
 
-#ui {
-    background-color: black;
-    padding: 50px;
-    margin: 50px;
-    border-radius: 10px;
-    opacity: 0.7;
-    width: 750px;
-    height: 570px;
+.image-container {
+    background-image: url(../img/background.JPG);
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
 }
-#ui label,h1 {
+.form-container {
+    background-color: #f3cf2f;
+    display: flex;
+    justify-content: center;
+}
+.form-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 100vh;
+}
+.form-box h4 {
+    font-weight: bold;
     color: #fff;
+}
+.form-box .form-input {
+    position: relative;
+}
+.form-box .form-input input {
+    width: 100%;
+    height: 50px;
+    margin-bottom: 20px;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    background: white;
+    padding-left: 30px;
+}
+.form-box .form-input input::placeholder {
+    padding-left: 0px;
+}
+.form-box .form-input input:focus,
+.form-box .form-input input:valid {
+    border-bottom: 2px solid #484048
+}
+.form-box input[type="checkbox"]:not(:checked) + label:before {
+    background: transparent;
+    border: 2px solid #fff;
+    width: 15px;
+    height: 15px;
+}
+.form-box .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
+    background-color: #48403d;
+    border: 0px;
+}
+.forget-link {
+    color: #fff;
+    font-weight: bold;
+}
+.forget-link:hover {
+    color: #292525;
+}
+.form-box button[type="submit"] {
+    border: none;
+    cursor: pointer;
+    width: 150px;
+    height: 40px;
+    border-right: 5px;
+    background-color: #fff;
+    color: #000;
+    font-weight: bold;
+    transition: 0.5s;
+}
+.form-box button[type="submit"]:hover {
+    box-shadow: 0px 9px 10px -2px rgba(0,0,0,0.55);
+    -webkit-box-shadow: 0px 9px 10px -2px rgba(0,0,0,0.55);
+    box-shadow: 0px 9px 10px -2px rgba(0,0,0,0.55);
 }
