getting started with debugging db, fixed some links

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,6 @@
     {{{ body }}}
 
 
-<script type="text/javascript" src="/assets/walke.js"></script>
+<script type="text/javascript" src="/assets/js/walke.js"></script>
 </body>
 </html>
