--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -28,7 +28,7 @@
           <option value="">Playtime Only</option>
         </select>
         <select id="input-group" style="background: black">
-          <option value="">Preffered Person</option>
+          <option value="">Prefered Person</option>
           <option value="">Male (>18 years-old)</option>
           <option value="">Female (>18 years-old)</option>
           <option value="">Teenager (13 - 17)</option>
