--- a/views/template.handlebars
+++ b/views/template.handlebars
@@ -90,13 +90,13 @@
 
             <div class="row justify-content-center mt-5">
                 <div class="col-md-6 col-lg-5 p-0 service-item overflow-hidden">
-                    <a href="register.html" target="_blank">
+                    <a href="/register" target="_blank">
                         <img src="/assets/img/signup.PNG" alt="register" class="card-border">
                     </a>
                 </div>
 
                 <div class="col-md-6 col-lg-5 p-0 service-item overflow-hidden">
-                    <a href="login.html" target="_blank">
+                    <a href="/login" target="_blank">
                         <img src="assets/img/signin.jpg" alt="login" class="card-border">
                     </a>
                 </div>    
