--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -28,31 +28,31 @@
       <div class="col-lg-6">
         <div id="ui">
           <h1 class="text-center">Registration Form</h1>
-          <form class="form-group text-center">
+          <form class= "register" "form-group text-center">
             <!-- firstname -->
             <div class="row">
               <div class="col-lg-6">
                 <label>First Name:</label>
-                <input type="text" name="fname" class="form-control" placeholder="Enter your First name">
+                <input type="text" name="fname" id="firstName-input" class="form-control" placeholder="Enter your First name">
               </div>
               <br>
               <!-- lastname -->
               <div class="row">
                 <div class="col-lg-6">
                   <label>Last Name:</label>
-                  <input type="text" name="lname" class="form-control" placeholder="Enter your Last name">
+                  <input type="text" name="lname" id="lastName-input" class="form-control" placeholder="Enter your Last name">
                 </div>
               </div>
               <br>
               <!-- email -->
               <label>E-mail</label>
-              <input type="email" name="email" class="form-control" placeholder="Enter your e-mail address">
+              <input type="email" name="email" id="email-input" class="form-control" placeholder="Enter your e-mail address">
               <br>
               <!-- password -->
               <div class="row">
                 <div class="col-lg-6">
                   <label>Password:</label>
-                  <input type="text" name="password" class="form-control" placeholder="Enter New password">
+                  <input type="text" name="password" id="password-input" class="form-control" placeholder="Enter New password">
                 </div>
                 <br>
                 <div class="row">
@@ -70,7 +70,7 @@
                   <option>Others</option>
                 </select>
                 <br>
-                <input type="submit" name="submit" value="submit" class="btn btn-primary btn-block btn-lg">
+                <input type="submit" name="submit" id="gender-input"  value="submit" class="btn btn-primary btn-block btn-lg">
 
           </form>
         </div>
