--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,76 +1,146 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Booking Form</title>
-  <link rel="stylesheet" href="css/bookingform.css" type="text/css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
-</head>
-<body id="booking">
-  <div class="container">
-    <form class="form-group">
-      <h1 class="text-center ">Booking Form</h1>
-      <div id="form">
-        <h3 class="text-white">Booking Details</h3>
-      <div id="input">
-        <input type="text" id="input-group" placeholder="From">
-        <input type="text" id="input-group" placeholder="To">
-        <select id="input-group" style="background: black">
-          <option value="">Activity</option>
-          <option value="">Evening Walk</option>
-          <option value="">Day Walk</option>
-          <option value="">Playtime Only</option>
-        </select>
-        <select id="input-group" style="background: black">
-          <option value="">Preffered Person</option>
-          <option value="">Male (>18 years-old)</option>
-          <option value="">Female (>18 years-old)</option>
-          <option value="">Teenager (13 - 17)</option>
-        </select>
-      </div>
 
-      <div id="input-2">
-        <input type="number" id="input-group" placeholder="Number of dog">
-        <input type="number" id="input-group" placeholder="X-Small Breed (0 - 8kg)">
-        <input type="number" id="input-group" placeholder="Small Breed (8 - 15kg)">
-        <input type="number" id="input-group" placeholder="Medium Breed (13 - 25kg)">
-        <input type="number" id="input-group" placeholder="Large Breed (20 - 35kg)">
-        <input type="number" id="input-group" placeholder="X-Large Breed (30 - 60kg+)">
-      </div>
+<body data-spy="scroll" data-target="#navbarResponsive">
+    <!-- start home section -->
+    <div id="home">
+    <!-- navigation -->
+    <nav class="navbar navbar-dark bg-dark navbar-expand-md fixed-top">
+        <a href="#" class="navbar-brand"><img src="https://img.icons8.com/color/48/000000/animal-shelter.png" alt="Logo" title="Logo"/></a>
+        <button class="navbar-toggler" type="button" data-toggler="collapse" data-target="#navbarResponsive">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div id="input-3">
-        <input type="text" id="input-group" placeholder="Dog Breed">
-        <input type="text" id="input-group" placeholder="Dog Gender">
-        <input type="text" id="input-group" placeholder="Dog Age">
-        <input type="text" id="input-group" placeholder="Dog Dietary">
+        <div class="collapse navbar-collapse" id="#navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a href="#home" class="nav-link center">Home</a></li>
+                <li class="nav-item"><a href="#about" class="nav-link center">About</a></li>
+                <li class="nav-item"><a href="#service" class="nav-link center">Services</a></li>
+                <li class="nav-item"><a href="#stories" class="nav-link center">Testimonials</a></li>
+                <li class="nav-item"><a href="#register" class="nav-link center">Register/ Sign In</a></li>
+                <li class="nav-item"><a href="#logout" class="nav-link center">Logout</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- landing page content -->
+    <div class="col-12 caption">
+        <div class="home-wrap">
+            <div class="home-inner"></div>
+        <a href="#about" class="btn btn-primary"><h1 class="text-light text-uppercase">LOVE YOUR PET LOVE YOUR COMMUNITY</h1></a>
+        
     </div>
-
-    <div id="input-4">
-        <input type="text" id="input-group" placeholder="Instruction">
-    </div>
-
-    <div id="input-5">
-      <h3 class="text-white">Personal Details</h3>
-  </div>
-
-  <div id="input-6">
-    <input type="text" id="input-group" placeholder="Full Name">
-    <input type="number" id="input-group" placeholder="Date of Birth">
-    <input type="number" id="input-group" placeholder="Phone Number">
-    <input type="email" id="input-group" placeholder="Email">
-  </div>
-
-  <div id="input-7">
-    <input type="text" id="input-group" placeholder="Comments">
 </div>
 
-    </form>
-  </div>
-</body>
-</html>
+    <!-- jumbotron -->
+    <div id="about" class="offset">
+    <div class="jumbotron text-center pt-5 mb-0">
+        <h2 class="heading">About</h2>
+        <div class="row justify-content-center mt-5">
+            <div class="col-md-6 col-lg-4 service pb-4 pb-lg-2">
+                <img src="assets/img/homeowner.PNG" alt="homeowner" class="card">
+                <h4 class="text-uppercase pt-3 pb-2">Pet Owner</h4>
+                <p class="lead"><b>Join For Free | Secure, Fast & Easy | Verified Sitters</b></p>
+            </div>
+
+            <div class="col-md-6 col-lg-4 service pb-4 pb-lg-2">
+                <img src="assets/img/petsitter.PNG" alt="petsitter" class="card">
+                <h4 class="text-uppercase pt-3 pb-2">Pet Sitter</h4>
+                <p class="lead"><b>Join For Free | Secure, Fast & Easy | Prompt Job Alert</b></p>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+    <!-- Services -->
+    <div id="service" class="offset">
+        <div class="container-fluid text-center py-5 mx-0">
+            <h2 class="heading">Services</h2>
+            
+            <div class="row justify-content-center mt-5">
+                <div class="col-md-6 col-lg-5 p-0 float-md-right service-item overflow-hidden">
+                    <a href="/booking" target="_blank">
+                        <img src="assets/img/booking.PNG" alt="booking" class="card-border">
+                    </a>
+                </div>
+
+                <div class="col-md-6 col-lg-5 p-0 service-item overflow-hidden">
+                    <a href="/payment" target="_blank">
+                        <img src="assets/img/payment.PNG" alt="payment" class="card-border">
+                    </a>
+                </div>
+            </div>
+
+            <div class="row justify-content-center mt-5">
+                <div class="col-md-6 col-lg-5 p-0 service-item overflow-hidden">
+                    <a href="register.html" target="_blank">
+                        <img src="/assets/img/signup.PNG" alt="register" class="card-border">
+                    </a>
+                </div>
+
+                <div class="col-md-6 col-lg-5 p-0 service-item overflow-hidden">
+                    <a href="login.html" target="_blank">
+                        <img src="assets/img/signin.jpg" alt="login" class="card-border">
+                    </a>
+                </div>    
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-10">
+                    <p class="lead mt-5 mb-4"><b>Get in touch with us to arrange additional pet sitting services such as small animals, exortic pets and more!</b></p>
+                    <a href="#contact" class="btn btn-secondary">Find Out More</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Testimonial -->
+    <div id="stories" class="offset">
+        <div class="jumbotron text-center pb-5 mb-0">
+            <h2 class="heading">Testimonials</h2>
+            <div class="row justify-content-center mt-5">
+                <div class="col-11 col-md-10">
+                    <div class="row pt-3">
+                        <div class="col-md-6 pb-5">
+                            <div class="card rounded-0 mx-lg-4">
+                                <img src="assets/img/test1.JPG" alt="Customer Image" class="card-img-top rounded-0">
+                                <div class="card-body">
+                                    <h4>Awesome Service!</h4>
+                                    <p class="lead border-top pt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                                </div> 
+                            </div>
+                        </div>
+
+                        <div class="col-md-6 pb-5">
+                            <div class="card rounded-0 mx-lg-4">
+                                <img src="assets/img/test2.JPG" alt="Customer Image" class="card-img-top rounded-0">
+                                <div class="card-body">
+                                    <h4>Highly Recommended!</h4>
+                                    <p class="lead border-top pt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                                </div> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Contact -->
+    <div id="contact" class="offset">
+        <div class="container-fluid footer">
+            <div class="row pt-4 pb-5 justify-content-center">
+                <div class="col-sm-11 col-md-9 col-lg-6 text-light text-center">
+                    <img src="https://img.icons8.com/color/48/000000/animal-shelter.png" alt="" class="my-5"/>
+                    <p>Customer Service Guranteed!</p>
+                    <ul class="social pt-3">
+                        <li><a href="#" target="_blank"><img src="https://img.icons8.com/fluent/48/000000/facebook-new.png"/></a></li>
+                        <li><a href="#" target="_blank"><img src="https://img.icons8.com/fluent/48/000000/instagram-new.png"/></a></li>
+                        <li><a href="#" target="_blank"></a><img src="https://img.icons8.com/nolan/64/twitter-squared.png"/></a></li>
+                    </ul>
+                </div>
+                <hr class="socket w-100 mt-5">
+                <p class="mb-0 text-light">Copyright &copy; WALKE All Rights Reserved 2000.</p>
+            </div>
+        </div>
+    </div>
+    </div>
+
