--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,19 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-   <title>Login Form</title>
-  <link rel="stylesheet" href="css/login.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
-    
-</head>
+<body data-spy="scroll" data-target="#navbarResponsive">
+    <!-- start home section -->
+    <div id="home">
+    <!-- navigation -->
+    <nav class="navbar navbar-info bg-info navbar-expand-md fixed-top">
+        <a href="#home" class="navbar-brand"><img src="https://img.icons8.com/color/48/000000/animal-shelter.png" alt="Logo" title="Logo"/></a>
+        <button class="navbar-toggler" type="button" data-toggler="collapse" data-target="#navbarResponsive">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-<body>
-  <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="#navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a href="template.html #home" class="nav-link center">Home</a></li>
+                <li class="nav-item"><a href="template.html #about" class="nav-link center">About</a></li>
+                <li class="nav-item"><a href="template.html #service" class="nav-link center">Services</a></li>
+                <li class="nav-item"><a href="template.html #stories" class="nav-link center">Testimonials</a></li>
+                <li class="nav-item"><a href="login.html" class="nav-link center">Sign In</a></li>
+                <li class="nav-item"><a href="template.html #logout" class="nav-link center">Logout</a></li>
+            </ul>
+        </div>
+    </nav>
+<!-- form -->
+    <div class="container-fluid">
       <div class="row">
         <div class="col-lg-6 col-md-6 d-none d-md-block image-container">
         </div>
@@ -64,13 +72,4 @@
         </div>
       </div>
     </div>
-
-</body>
-
-</html>
-
-
-
-
-  
  
