--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -36,13 +36,13 @@
             
             <div class="row justify-content-center mt-5">
                 <div class="col-md-6 col-lg-5 p-0 float-md-right service-item overflow-hidden">
-                    <a href="booking.html" target="_blank">
+                    <a href="/booking" target="_blank">
                         <img src="assets/img/booking.PNG" alt="booking" class="card-border">
                     </a>
                 </div>
 
                 <div class="col-md-6 col-lg-5 p-0 service-item overflow-hidden">
-                    <a href="payment.html" target="_blank">
+                    <a href="/payment" target="_blank">
                         <img src="assets/img/payment.PNG" alt="payment" class="card-border">
                     </a>
                 </div>
@@ -50,13 +50,13 @@
 
             <div class="row justify-content-center mt-5">
                 <div class="col-md-6 col-lg-5 p-0 service-item overflow-hidden">
-                    <a href="register.html" target="_blank">
+                    <a href="/register" target="_blank">
                         <img src="assets/img/signup.PNG" alt="register" class="card-border">
                     </a>
                 </div>
 
                 <div class="col-md-6 col-lg-5 p-0 service-item overflow-hidden">
-                    <a href="login.html" target="_blank">
+                    <a href="/login" target="_blank">
                         <img src="assets/img/signin.jpg" alt="login" class="card-border">
                     </a>
                 </div>    
