--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,24 @@
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Project 2</title>
+
+<link rel="stylesheet" href="assets/css/login.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
+    <a href="https://icons8.com/icon/8CQiYMYllkAz/animal-shelter"></a>
+    <a href="https://icons8.com/icon/uLWV5A9vXIPu/facebook"></a>
+    <a href="https://icons8.com/icon/Xy10Jcu1L2Su/instagram"></a>
+    <a href="https://icons8.com/icon/MP7jET0S1bw5/twitter-squared"></a>
+
+
+</head>
 
 {{>nav}}
-
-<script type="text/javascript" src="assets/js/login.js"></script>
 
 <!-- form -->
     <div class="container-fluid">
@@ -16,10 +33,10 @@
             </div>
             <form>
               <div class="form-input">
-                <input type="email" placeholder="Email Address" required>
+                <input id="email" type="email" class="form-control" placeholder="Email Address" required>
               </div>
               <div class="form-input">
-                <input type="password" placeholder="Password" required>
+                <input id="password" type="password" class="form-control" placeholder="Password">
               </div>
               <div class="row mb-3">
                 <div class="col-6 d-flex">
@@ -56,3 +73,4 @@
       </div>
     </div>
  
+<script type="text/javascript" src="assets/js/login.js"></script>
