--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -8,11 +8,11 @@
                     <ul class="social pt-3">
                         <li><a href="#" target="_blank"><img src="https://img.icons8.com/fluent/48/000000/facebook-new.png"/></a></li>
                         <li><a href="#" target="_blank"><img src="https://img.icons8.com/fluent/48/000000/instagram-new.png"/></a></li>
-                        <li><a href="#" target="_blank"></a><img src="https://img.icons8.com/nolan/64/twitter-squared.png"/></a></li>
+                        <li><a href="#" target="_blank"><img src="https://img.icons8.com/nolan/64/twitter-squared.png"/></a></li>
                     </ul>
                 </div>
                 <hr class="socket w-100 mt-5">
-                <p class="mb-0 text-light">Copyright &copy; WALKE All Rights Reserved 2000.</p>
+                <p class="mb-0 text-light">Copyright &copy; WALKE All Rights Reserved 2020.</p>
             </div>
         </div>
     </div>
