--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,6 +1,23 @@
+  <html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Register Form</title>
+  <link rel="stylesheet" href="assets/css/register.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
+    <a href="https://icons8.com/icon/8CQiYMYllkAz/animal-shelter"></a>
+    <a href="https://icons8.com/icon/uLWV5A9vXIPu/facebook"></a>
+    <a href="https://icons8.com/icon/Xy10Jcu1L2Su/instagram"></a>
+    <a href="https://icons8.com/icon/MP7jET0S1bw5/twitter-squared"></a>
+</head>
+  
   {{>nav}}
 
-<script type="text/javascript" src="assets/js/register.js"></script>
+
 
 <!-- form -->
 <div class="container-fluid">
@@ -15,22 +32,22 @@
         </div>
         <form>
           <div class="form-input">
-            <input type="text" placeholder="First Name" required>
+            <input id="firstname" type="text" class="form-control" placeholder="First Name" required>
           </div>
           <div class="form-input">
-            <input type="text" placeholder="Last Name" required>
+            <input id="lastname" type="text" class="form-control" placeholder="Last Name" required>
           </div>
           <div class="form-input">
-            <input type="email" placeholder="Email Address" required>
+            <input id="email" type="email" class="form-control" placeholder="Email Address" required>
           </div>
           <div class="form-input">
-            <input type="password" placeholder="Password" required>
+            <input id="password" type="password" class="form-control" placeholder="Password" required>
           </div>
           <div class="form-input">
-            <input type="password" placeholder="Re-enter Password" required>
+            <input id="repassword" type="password" class="form-control" placeholder="Re-enter Password" required>
           </div>
           <div class="form-input">
-            <input type="text" placeholder="Contact Number" required>
+            <input id="contact" type="text" class="form-control" placeholder="Contact Number" required>
           </div>
           <div class="text-left mb-3">
             <button type="submit" class="btn">Register</button>
@@ -40,3 +57,5 @@
 
     </div>
   </div>
+
+  <script type="text/javascript" src="assets/js/register.js"></script>
