Updating latest Register done

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -52,7 +52,7 @@
                 </div>
               </div>
               <div class="text-left mb-3">
-                <button type="submit" class="btn">Login</button>
+                <button id="loginBtn" type="submit" class="btn">Login</button>
               </div>
               <div class="text-center mb-2">
                 <div class="mb-3" style="color: #777">or login with</div>
